Fixed the login page being slightly too large for display.

--- a/the3DMarket/app/assets/stylesheets/login.css.sass
+++ b/the3DMarket/app/assets/stylesheets/login.css.sass
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 body
-  height: 100vh
+  height: 100%
   .main
     height: 100%
     
